--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@ body {
 }
   
 * {
-    padding: 0px;
-    margin: 0px;
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 ::-webkit-scrollbar {
