--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,9 @@ body {
     width: 700px;
     height: 900px;
     margin-top: -330px;
+    border-radius: 40px;
+    box-shadow: 0px 0px 25px #d68a34;
+    object-fit: cover;
 }
 
 .exercise-card {
