--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ body {
 }
 
 .react-horizontal-scrolling-menu--wrapper {
-    width: 95vw;
+    width: 75vw;
     display: flex;
     flex-wrap: wrap;
 }
@@ -59,7 +59,7 @@ body {
     width: 700px;
     height: 900px;
     margin-top: -330px;
-    border-radius: 40px;
+    border-bottom-left-radius: 50px;
     box-shadow: 0px 0px 25px #d68a34;
     object-fit: cover;
 }
